docu/Spec/output/XieXieParser.java
// $ANTLR 3.5 D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g 2014-06-10 20:58:55

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class XieXieParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BIN_LITERAL", "BLOCK_COMMENT", 
		"BOOL_LITERAL", "BOOL_TYPE_DENOTER", "BinDigit", "CHAR_LITERAL", "DEC_LITERAL", 
		"DecDigit", "EscapeCharacter", "FLOAT_LITERAL", "FLOAT_TYPE_DENOTER", 
		"HEX_LITERAL", "HexDigit", "IDENT", "INT_LITERAL", "INT_TYPE_DENOTER", 
		"LINE_COMMENT", "Letter", "NULL_LITERAL", "OCT_LITERAL", "OctDigit", "SUPER_LITERAL", 
		"THIS_LITERAL", "WS", "'!='", "'%'", "'%='", "'&'", "'&='", "'('", "')'", 
		"'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'->'", 
		"'.'", "'..'", "'/'", "'/='", "':'", "':='", "';'", "'<'", "'<<'", "'<<='", 
		"'<='", "'='", "'>'", "'>='", "'>>'", "'>>='", "'[['", "']]'", "'^'", 
		"'^='", "'and'", "'break'", "'case'", "'class'", "'continue'", "'default'", 
		"'do'", "'else'", "'enum'", "'extern'", "'flags'", "'for'", "'foreach'", 
		"'forever'", "'if'", "'not'", "'or'", "'return'", "'static'", "'switch'", 
		"'while'", "'{'", "'|'", "'|='", "'}'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int BIN_LITERAL=4;
	public static final int BLOCK_COMMENT=5;
	public static final int BOOL_LITERAL=6;
	public static final int BOOL_TYPE_DENOTER=7;
	public static final int BinDigit=8;
	public static final int CHAR_LITERAL=9;
	public static final int DEC_LITERAL=10;
	public static final int DecDigit=11;
	public static final int EscapeCharacter=12;
	public static final int FLOAT_LITERAL=13;
	public static final int FLOAT_TYPE_DENOTER=14;
	public static final int HEX_LITERAL=15;
	public static final int HexDigit=16;
	public static final int IDENT=17;
	public static final int INT_LITERAL=18;
	public static final int INT_TYPE_DENOTER=19;
	public static final int LINE_COMMENT=20;
	public static final int Letter=21;
	public static final int NULL_LITERAL=22;
	public static final int OCT_LITERAL=23;
	public static final int OctDigit=24;
	public static final int SUPER_LITERAL=25;
	public static final int THIS_LITERAL=26;
	public static final int WS=27;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "synpred40_XieXie", "synpred27_XieXie", "expr_list", "synpred5_XieXie", 
		"synpred23_XieXie", "synpred64_XieXie", "expr_pattern", "synpred31_XieXie", 
		"synpred10_XieXie", "synpred15_XieXie", "synpred48_XieXie", "synpred71_XieXie", 
		"div_expr", "enum_entry_list", "enum_entry", "synpred18_XieXie", "synpred30_XieXie", 
		"synpred76_XieXie", "synpred96_XieXie", "enum_decl_stmnt", "do_while_stmnt", 
		"synpred94_XieXie", "enum_body", "bitwise_or_expr", "variable_ident", 
		"synpred7_XieXie", "synpred13_XieXie", "pattern", "synpred22_XieXie", 
		"synpred80_XieXie", "attribute_argument_list", "mul_expr", "program", 
		"shift_expr", "sub_expr", "synpred33_XieXie", "synpred54_XieXie", "synpred47_XieXie", 
		"synpred24_XieXie", "synpred72_XieXie", "synpred3_XieXie", "attribute_list", 
		"switch_stmnt", "unary_expr", "synpred35_XieXie", "decl_stmnt_list", "variable_decl_stmnt", 
		"synpred53_XieXie", "for_stmnt", "enum_entry_name", "type_inheritance", 
		"synpred34_XieXie", "synpred68_XieXie", "for_range_stmnt", "flags_body", 
		"buildin_type_denoter", "parameter_list", "synpred4_XieXie", "synpred60_XieXie", 
		"function_modifier", "bitwise_and_expr", "case_item_list", "continue_stmnt", 
		"synpred87_XieXie", "synpred39_XieXie", "synpred95_XieXie", "synpred58_XieXie", 
		"synpred67_XieXie", "relation_expr", "synpred92_XieXie", "synpred29_XieXie", 
		"stmnt", "default_label", "synpred88_XieXie", "synpred41_XieXie", "switch_case", 
		"synpred12_XieXie", "synpred84_XieXie", "synpred65_XieXie", "function_head", 
		"synpred69_XieXie", "class_body", "synpred36_XieXie", "synpred9_XieXie", 
		"synpred73_XieXie", "bitwise_xor_expr", "attribute_prefix", "synpred83_XieXie", 
		"enum_case_pattern", "flags_entry_list", "synpred25_XieXie", "synpred77_XieXie", 
		"function_decl_stmnt", "synpred85_XieXie", "for_range", "synpred14_XieXie", 
		"variable_init", "synpred98_XieXie", "synpred90_XieXie", "flags_decl_stmnt", 
		"bracket_expr", "expr", "arithmetic_expr", "synpred86_XieXie", "synpred37_XieXie", 
		"synpred66_XieXie", "class_modifier", "if_condition", "synpred81_XieXie", 
		"else_stmnt", "logic_and_expr", "synpred28_XieXie", "synpred50_XieXie", 
		"synpred63_XieXie", "synpred17_XieXie", "case_label", "synpred26_XieXie", 
		"synpred38_XieXie", "synpred70_XieXie", "for_init", "synpred79_XieXie", 
		"for_each_stmnt", "argument", "synpred43_XieXie", "stmnt_list", "synpred91_XieXie", 
		"if_stmnt", "synpred97_XieXie", "synpred55_XieXie", "return_stmnt", "type_denoter", 
		"synpred75_XieXie", "modify_assign_stmnt", "synpred42_XieXie", "synpred57_XieXie", 
		"function_call", "flags_entry", "synpred74_XieXie", "code_block", "add_expr", 
		"attribute_argument", "synpred52_XieXie", "synpred89_XieXie", "synpred32_XieXie", 
		"enum_case_name", "synpred51_XieXie", "synpred56_XieXie", "for_each_init", 
		"assign_stmnt", "attribute", "parameter", "for_ever_stmnt", "synpred46_XieXie", 
		"cast_expr", "argument_list", "synpred20_XieXie", "synpred11_XieXie", 
		"loop_stmnt", "synpred2_XieXie", "copy_assign_stmnt", "variable_name", 
		"synpred6_XieXie", "synpred49_XieXie", "post_operator_stmnt", "synpred8_XieXie", 
		"synpred78_XieXie", "synpred45_XieXie", "synpred1_XieXie", "value_expr", 
		"synpred62_XieXie", "break_stmnt", "class_decl_stmnt", "decl_stmnt", "type_multi_inheritance", 
		"synpred44_XieXie", "class_name", "synpred19_XieXie", "case_item", "synpred61_XieXie", 
		"branch_stmnt", "synpred59_XieXie", "synpred99_XieXie", "ctrl_transfer_stmnt", 
		"custom_type_denoter", "while_stmnt", "equality_expr", "switch_case_list", 
		"synpred21_XieXie", "synpred82_XieXie", "class_decl_stmnt_list", "synpred93_XieXie", 
		"logic_or_expr", "synpred16_XieXie", "call_expr", "init_list_expr"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, true, true, false, true, false, true, 
		    false, false, false, false, false, false, true, true, false, false, 
		    false, false, false, true, false, false, false, true, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, true, 
		    false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public XieXieParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public XieXieParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[195+1];


		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public XieXieParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
		this.state.ruleMemo = new HashMap[195+1];


	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return XieXieParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g"; }



	// $ANTLR start "program"
	// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:14:1: program : ( class_decl_stmnt_list )? EOF ;
	public final void program() throws  {
		int program_StartIndex = input.index();

		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(14, 0);

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:14:8: ( ( class_decl_stmnt_list )? EOF )
			dbg.enterAlt(1);

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:14:10: ( class_decl_stmnt_list )? EOF
			{
			dbg.location(14,10);
			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:14:10: ( class_decl_stmnt_list )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==68||LA1_0==74) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:14:10: class_decl_stmnt_list
					{
					dbg.location(14,10);
					pushFollow(FOLLOW_class_decl_stmnt_list_in_program43);
					class_decl_stmnt_list();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(14,33);
			match(input,EOF,FOLLOW_EOF_in_program46); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }

		}
		dbg.location(14, 35);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "code_block"
	// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:16:1: code_block : '{' ( stmnt_list )? '}' ;
	public final void code_block() throws  {
		int code_block_StartIndex = input.index();

		try { dbg.enterRule(getGrammarFileName(), "code_block");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(16, 0);

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return; }

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:16:11: ( '{' ( stmnt_list )? '}' )
			dbg.enterAlt(1);

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:16:13: '{' ( stmnt_list )? '}'
			{
			dbg.location(16,13);
			match(input,86,FOLLOW_86_in_code_block53); if (state.failed) return;dbg.location(16,17);
			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:16:17: ( stmnt_list )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==BOOL_TYPE_DENOTER||LA2_0==FLOAT_TYPE_DENOTER||LA2_0==IDENT||LA2_0==INT_TYPE_DENOTER||LA2_0==61||LA2_0==66||(LA2_0 >= 68 && LA2_0 <= 69)||LA2_0==71||(LA2_0 >= 73 && LA2_0 <= 79)||(LA2_0 >= 82 && LA2_0 <= 85)) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:16:17: stmnt_list
					{
					dbg.location(16,17);
					pushFollow(FOLLOW_stmnt_list_in_code_block55);
					stmnt_list();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(16,29);
			match(input,89,FOLLOW_89_in_code_block58); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, code_block_StartIndex); }

		}
		dbg.location(16, 31);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "code_block");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "code_block"



	// $ANTLR start "stmnt_list"
	// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:19:1: stmnt_list : ( stmnt )+ ;
	public final void stmnt_list() throws  {
		int stmnt_list_StartIndex = input.index();

		try { dbg.enterRule(getGrammarFileName(), "stmnt_list");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return; }

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:19:11: ( ( stmnt )+ )
			dbg.enterAlt(1);

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:19:16: ( stmnt )+
			{
			dbg.location(19,16);
			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:19:16: ( stmnt )+
			int cnt3=0;
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==BOOL_TYPE_DENOTER||LA3_0==FLOAT_TYPE_DENOTER||LA3_0==IDENT||LA3_0==INT_TYPE_DENOTER||LA3_0==61||LA3_0==66||(LA3_0 >= 68 && LA3_0 <= 69)||LA3_0==71||(LA3_0 >= 73 && LA3_0 <= 79)||(LA3_0 >= 82 && LA3_0 <= 85)) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:19:16: stmnt
					{
					dbg.location(19,16);
					pushFollow(FOLLOW_stmnt_in_stmnt_list69);
					stmnt();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(3, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt3++;
			}
			} finally {dbg.exitSubRule(3);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, stmnt_list_StartIndex); }

		}
		dbg.location(19, 21);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "stmnt_list");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "stmnt_list"



	// $ANTLR start "decl_stmnt_list"
	// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:20:1: decl_stmnt_list : ( decl_stmnt )+ ;
	public final void decl_stmnt_list() throws  {
		int decl_stmnt_list_StartIndex = input.index();

		try { dbg.enterRule(getGrammarFileName(), "decl_stmnt_list");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(20, 0);

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return; }

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:20:16: ( ( decl_stmnt )+ )
			dbg.enterAlt(1);

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:20:20: ( decl_stmnt )+
			{
			dbg.location(20,20);
			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:20:20: ( decl_stmnt )+
			int cnt4=0;
			try { dbg.enterSubRule(4);

			loop4:
			while (true) {
				int alt4=2;
				try { dbg.enterDecision(4, decisionCanBacktrack[4]);

				int LA4_0 = input.LA(1);
				if ( (LA4_0==BOOL_TYPE_DENOTER||LA4_0==FLOAT_TYPE_DENOTER||LA4_0==IDENT||LA4_0==INT_TYPE_DENOTER||LA4_0==61||LA4_0==68||(LA4_0 >= 73 && LA4_0 <= 75)||LA4_0==83) ) {
					alt4=1;
				}

				} finally {dbg.exitDecision(4);}

				switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:20:20: decl_stmnt
					{
					dbg.location(20,20);
					pushFollow(FOLLOW_decl_stmnt_in_decl_stmnt_list78);
					decl_stmnt();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(4, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt4++;
			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, decl_stmnt_list_StartIndex); }

		}
		dbg.location(20, 30);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "decl_stmnt_list");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "decl_stmnt_list"



	// $ANTLR start "class_decl_stmnt_list"
	// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:21:1: class_decl_stmnt_list : ( class_decl_stmnt )+ ;
	public final void class_decl_stmnt_list() throws  {
		int class_decl_stmnt_list_StartIndex = input.index();

		try { dbg.enterRule(getGrammarFileName(), "class_decl_stmnt_list");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(21, 0);

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return; }

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:21:22: ( ( class_decl_stmnt )+ )
			dbg.enterAlt(1);

			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:21:24: ( class_decl_stmnt )+
			{
			dbg.location(21,24);
			// D:\\SoftwareEntwicklung\\C++\\HLC\\Tools\\XieXie-2.0\\repository\\docu\\Spec\\XieXie.g:21:24: ( class_decl_stmnt )+
			int cnt5=0;
			try { dbg.enterSubRule(5);

			loop5:
			while (true) {
				int alt5=2;
				try { dbg.enterDecision(5, decisionCanBacktrack[5]);

				int LA5_0 = input.LA(1);
				if ( (LA5_0==68||LA5_0==74) ) {
					alt5=1;
				}

				} finally {dbg.exitDecision(5);}

				switch (alt5) {
				case 1 :
					dbg.enterAlt(1);
